--- a/showing_app/templates/index.html
+++ b/showing_app/templates/index.html
@@ -26,9 +26,8 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">출석체크!</a></li>
-								<li><a href="#contact" onclick="change_location('logout')">Logout</a></li>
-					
+								<li><a href="#" onclick="change_location('qrcode')">출석체크!</a></li>
+								<li><a href="#" onclick="change_location('logout')">Logout</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
