--- a/showing_app/templates/login.html
+++ b/showing_app/templates/login.html
@@ -64,7 +64,8 @@
 						
 							<ul class="icons">
                                 <li><a href="https://www.instagram.com/done_by_us/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-                                <li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+                                <li><a href="https://github.com/Chominsu98/DbuProject_upgraded" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+                                <li><a href="{% url 'admin_controller' %}" ><i class="fas fa-tools"></i><span class="label"></span></a></li>
                             </ul>
 						
 					</header>
