--- a/showing_app/templates/base.html
+++ b/showing_app/templates/base.html
@@ -19,6 +19,7 @@
     	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.1.10/vue.min.js"></script>
     	<script type="text/javascript" src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
 		<script type="text/javascript" src=https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js></script>
+		<script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js"></script>
 	
 
 	</head>
